--- a/arbitrum-v2-subgraph/package.json
+++ b/arbitrum-v2-subgraph/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "create-local": "graph create ethereum/uniswapv2 --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy ethereum/uniswapv2 --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
+    "create-local": "graph create arbitrum/uniswapv2 --node http://127.0.0.1:8020",
+    "deploy-local": "graph deploy arbitrum/uniswapv2 --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
     "create-graph-node": "graph create base/uniswapv2 --node http://127.0.0.1:8020",
     "deploy-graph-node": "graph deploy base/uniswapv2 --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
     "deploy": "graph deploy levi0522/uniswap-v2-test11 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug --access-token c57fdc8933d474ad988250cf05efe951",
