--- a/optimism-v2-subgraph/subgraph.yaml
+++ b/optimism-v2-subgraph/subgraph.yaml
@@ -3,17 +3,14 @@ description: Uniswap is a decentralized protocol for automated token exchange on
 repository: https://github.com/Uniswap/uniswap-v2-subgraph
 schema:
   file: ./schema.graphql
-#graft:
-#  base: Qmc7K8dKoadu1VcHfAV45pN4sPnwZcU2okV6cuU4B7qQp1
-#  block: 17308000
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: mainnet
+    network: optimism
     source:
-      address: '0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f'
+      address: '0x0c3c1c532F1e39EdF36BE9Fe0bE1410313E074Bf'
       abi: Factory
-      startBlock: 19809314
+      startBlock: 112197985
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,7 +34,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: mainnet
+    network: optimism
     source:
       abi: Pair
     mapping:
