--- a/v2-subgraph/package.json
+++ b/v2-subgraph/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "create-local": "graph create ethereum/uniswapv2 --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy ethereum/uniswapv2 --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
-    "create-graph-node": "graph create base/uniswapv2 --node http://167.99.79.168:8020",
-    "deploy-graph-node": "graph deploy base/uniswapv2 --debug --ipfs http://167.99.79.168:5001 --node http://167.99.79.168:8020",
+    "create-local": "graph create ethereum_2/uniswapv2 --node http://127.0.0.1:8020",
+    "deploy-local": "graph deploy ethereum_2/uniswapv2 --debug --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
+    "create-graph-node": "graph create ethereum_2/uniswapv2 --node http://167.99.79.168:8020",
+    "deploy-graph-node": "graph deploy ethereum_2/uniswapv2 --debug --ipfs http://167.99.79.168:5001 --node http://167.99.79.168:8020",
     "deploy": "graph deploy levi0522/uniswap-v2-test11 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug --access-token c57fdc8933d474ad988250cf05efe951",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://165.232.163.158:8020/ --ipfs http://localhost:5001"
